--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.1.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.3",
+    "json-server": "^0.17.0",
     "primeicons": "^4.1.0",
     "primeng": "^10.0.3",
     "rxjs": "~6.6.0",
